# AMAIMA

./: .env.example  .gitignore  .replit  AMAIMA_PROJECT_STATUS.md  Dockerfile  LICENSE  README.md  TO-DO_LIST.md  TO_DO_LIST.md  amaima-release.keystore  convert_imports.py  docker-compose.override.yml  docker-compose.yml  package-lock.json  package.json  pyproject.toml  relativize.py  rende.yaml  replit.md  start.sh
amaima/: README.md
attached_assets/: Pasted--AMAIMA-is-now-at-the-exact-moment-where-adding-FHE-sto_1771643122456.txt  Pasted--CONFIRMED-You-added-the-Top-5-Based-on-what-you-told-m_1771597422917.txt  Pasted--Code-scanning-alerts-49-Use-of-a-broken-or-weak-crypto_1771306262913.txt  Pasted--Deep-Dive-into-Remaining-Tasks-from-docs-TO-DO-LIST-md_1769287766980.txt  Pasted--Diagnosis-Turbopack-Webpack-Conflict-Common-Next-js-14_1769755073413.txt  Pasted--ERRORS-ERRO-1771320456622_1771320456625.txt  Pasted--Error-Type-Console-Error-Error-Message-A-tree-hydrated_1771297856109.txt  Pasted--Error-Type-Console-Error-Error-Message-A-tree-hydrated_1771598372568.txt  Pasted--FEEDBACK-Let-me-walk-through-what-you-ve-done-and-why-_1771421123761.txt  Pasted--Feedback-That-s-a-clean-close-You-didn-t-just-finish-t_1769364595522.txt  Pasted--Key-License-Implications-for-Monetization-Three-Tier-S_1771295923295.txt  Pasted--Let-s-Take-the-Recommended-Path-Harden-for-Vercel-Opti_1769754510391.txt  Pasted--What-s-Already-Covered-by-Current-Models-General-Exper_1771292101216.txt  Pasted--Yep-this-is-a-classic-Next-js-CI-footgun-and-you-hit-i_1769524720368.txt  Pasted--frontend-yml-yml-name-Frontend-CI-CD-permissions-conte_1769516774544.txt  Pasted-00-43-14-696-Running-build-in-Washington-D-C-USA-East-i_1769752470732.txt  Pasted-00-58-33-210-Build-error-occurred-00-58-33-213-Error-Tu_1769753338344.txt  (+45 more)
docs/: AMAIMA_FHE_Implementation_Plan.md  File_Paths.md  (+13 more)
(+250 files in other folders)
