[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=25.1.0",
    "asyncpg>=0.31.0",
    "bcrypt>=5.0.0",
    "fastapi>=0.128.0",
    "gputil>=1.4.0",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "openai>=2.21.0",
    "orjson>=3.11.5",
    "passlib[bcrypt]>=1.7.4",
    "pillow>=12.1.1",
    "psutil>=7.2.1",
    "psycopg2-binary>=2.9.11",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "python-dateutil>=2.9.0.post0",
    "python-dotenv>=1.2.1",
    "python-jose[cryptography]>=3.5.0",
    "python-multipart>=0.0.21",
    "pyyaml>=6.0.3",
    "redis>=7.1.0",
    "speedtest-cli>=2.1.3",
    "sqlalchemy[asyncio]>=2.0.46",
    "sse-starlette>=3.2.0",
    "tenseal>=0.3.16",
    "uvicorn[standard]>=0.40.0",
]

[tool.pytest.ini_options]
testpaths = ["amaima/backend/tests"]
asyncio_mode = "auto"
pythonpath = ["amaima/backend"]
